--- a/index.html
+++ b/index.html
@@ -658,9 +658,11 @@
 			<!-- Testimonial section -->
 			<section class="bg-gray-100 py-20">
 				<div class="container mx-auto px-6" data-aos="fade-up">
-					<div class="flex flex-wrap justify-center gap-3">
+					<div
+						class="w-full flex flex-col items-center justify-center sm:flex-row sm:flex-wrap gap-3"
+					>
 						<div
-							class="bg-white rounded-lg shadow-md p-6 w-1/3 flex"
+							class="bg-white rounded-lg shadow-md p-6 w-full md:w-1/3 flex"
 						>
 							<p class="text-gray-600 mb-4">
 								"Tablingos is amazing. I used to spend hours on
@@ -669,7 +671,7 @@
 							</p>
 						</div>
 						<div
-							class="bg-white rounded-lg shadow-md p-6 w-1/3 flex items-center"
+							class="bg-white rounded-lg shadow-md p-6 w-full md:w-1/3 flex items-center"
 						>
 							<p class="text-gray-600 mb-4">
 								"I've never seen anything like this before. It's
@@ -677,7 +679,7 @@
 							</p>
 						</div>
 						<div
-							class="bg-white rounded-lg shadow-md p-6 w-1/3 flex items-center"
+							class="bg-white rounded-lg shadow-md p-6 w-full md:w-1/3 flex items-center"
 						>
 							<p class="text-gray-600 mb-4">
 								"The configuration options are amazing. I can
