remove pricing and soc 2 claim

--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
 			</section>
 
 			<!-- Security Commitment section -->
-			<section class="bg-white py-20 px-48">
+			<section class="bg-white py-20 px-32">
 				<div class="container mx-auto px-6">
 					<div class="flex flex-col md:flex-row items-center">
 						<div class="mb-8 md:mb-0" data-aos="fade-right">
@@ -701,14 +701,15 @@
 							</h2>
 							<p class="text-gray-600 mb-4">
 								At Tablingos, we understand the importance of
-								data security. That's why we're proud to be SOC
-								2 compliant, ensuring that your data is
-								protected by the highest industry standards.
+								data security. That's why we're proud to be
+								continuously monitored for SOC 2 compliance,
+								ensuring that your data is protected by the
+								highest industry standards.
 							</p>
 							<p class="text-gray-600 mb-4">
-								Our SOC 2 compliance is continuously monitored
-								by TrustCloud, providing you with the assurance
-								that your data is safe and secure at all times.
+								Our security posture is validated by TrustCloud,
+								providing you with the assurance that your data
+								is safe and secure at all times.
 							</p>
 							<div class="flex items-center">
 								<div class="flex items-center mr-6">
@@ -727,7 +728,7 @@
 										></path>
 									</svg>
 									<span class="font-semibold"
-										>SOC 2 Compliant</span
+										>Monitored for SOC 2</span
 									>
 								</div>
 								<div class="flex items-center">
@@ -746,7 +747,7 @@
 										></path>
 									</svg>
 									<span class="font-semibold"
-										>Monitored by TrustCloud</span
+										>Validated by TrustCloud</span
 									>
 								</div>
 							</div>
