remove pricing and soc 2 claim

--- a/pricing.html
+++ b/pricing.html
@@ -522,7 +522,8 @@
 						<ul>
 							<li>
 								<a
-									href="#"
+									href="https://x.com/Tablingos"
+									target="_blank"
 									class="text-gray-400 hover:text-white transition duration-300"
 									>Twitter</a
 								>
@@ -543,7 +544,8 @@
 							</li>
 							<li>
 								<a
-									href="#"
+									href="https://www.linkedin.com/company/tablingos"
+									target="_blank"
 									class="text-gray-400 hover:text-white transition duration-300"
 									>LinkedIn</a
 								>
