--- a/about.html
+++ b/about.html
@@ -214,108 +214,103 @@
 					>
 						Meet Our Team
 					</h2>
-					<div class="team-scroll-container" data-aos="fade-up">
-						<div class="team-scroll space-x-6">
-							<div
-								class="flex-shrink-0 w-64 bg-white p-6 rounded-lg shadow-md"
-							>
-								<div class="relative w-32 h-32 mx-auto mb-4">
-									<img
-										src="res/IKB_SQUARE.jpeg"
-										alt="Ibrahim Khawar"
-										class="w-full h-full object-cover rounded-full"
-									/>
-									<a
-										href="https://www.linkedin.com/in/ibrahim-khawar-24873a215/"
-										target="_blank"
-										rel="noopener noreferrer"
-										class="absolute top-0 right-0 bg-white rounded-full p-1"
+					<div
+						class="flex flex-wrap justify-center gap-6"
+						data-aos="fade-up"
+					>
+						<div class="w-64 bg-white p-6 rounded-lg shadow-md">
+							<div class="relative w-32 h-32 mx-auto mb-4">
+								<img
+									src="res/IKB_SQUARE.jpeg"
+									alt="Ibrahim Khawar"
+									class="w-full h-full object-cover rounded-full"
+								/>
+								<a
+									href="https://www.linkedin.com/in/ibrahim-khawar-24873a215/"
+									target="_blank"
+									rel="noopener noreferrer"
+									class="absolute top-0 right-0 bg-white rounded-full p-1"
+								>
+									<svg
+										class="w-5 h-5 text-blue-600"
+										fill="currentColor"
+										viewBox="0 0 20 20"
+										xmlns="http://www.w3.org/2000/svg"
 									>
-										<svg
-											class="w-5 h-5 text-blue-600"
-											fill="currentColor"
-											viewBox="0 0 20 20"
-											xmlns="http://www.w3.org/2000/svg"
-										>
-											<path
-												d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
-											/>
-										</svg>
-									</a>
-								</div>
-								<h3 class="text-xl font-bold text-center mb-2">
-									Ibrahim Khawar
-								</h3>
-								<p class="text-gray-600 text-center">
-									Founder & CEO
-								</p>
+										<path
+											d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
+										/>
+									</svg>
+								</a>
 							</div>
-							<div
-								class="flex-shrink-0 w-64 bg-white p-6 rounded-lg shadow-md"
-							>
-								<div class="relative w-32 h-32 mx-auto mb-4">
-									<img
-										src="res/AK_SQUARE.png"
-										alt="Aasim Khwaja"
-										class="w-full h-full object-cover rounded-full"
-									/>
-									<a
-										href="https://www.linkedin.com/in/aasimulhaq"
-										target="_blank"
-										rel="noopener noreferrer"
-										class="absolute top-0 right-0 bg-white rounded-full p-1"
+							<h3 class="text-xl font-bold text-center mb-2">
+								Ibrahim Khawar
+							</h3>
+							<p class="text-gray-600 text-center">
+								Founder & CEO
+							</p>
+						</div>
+						<div class="w-64 bg-white p-6 rounded-lg shadow-md">
+							<div class="relative w-32 h-32 mx-auto mb-4">
+								<img
+									src="res/AK_SQUARE.png"
+									alt="Aasim Khwaja"
+									class="w-full h-full object-cover rounded-full"
+								/>
+								<a
+									href="https://www.linkedin.com/in/aasimulhaq"
+									target="_blank"
+									rel="noopener noreferrer"
+									class="absolute top-0 right-0 bg-white rounded-full p-1"
+								>
+									<svg
+										class="w-5 h-5 text-blue-600"
+										fill="currentColor"
+										viewBox="0 0 20 20"
+										xmlns="http://www.w3.org/2000/svg"
 									>
-										<svg
-											class="w-5 h-5 text-blue-600"
-											fill="currentColor"
-											viewBox="0 0 20 20"
-											xmlns="http://www.w3.org/2000/svg"
-										>
-											<path
-												d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
-											/>
-										</svg>
-									</a>
-								</div>
-								<h3 class="text-xl font-bold text-center mb-2">
-									Aasim Ul Haq
-								</h3>
-								<p class="text-gray-600 text-center">CMO</p>
+										<path
+											d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
+										/>
+									</svg>
+								</a>
 							</div>
-							<div
-								class="flex-shrink-0 w-64 bg-white p-6 rounded-lg shadow-md"
-							>
-								<div class="relative w-32 h-32 mx-auto mb-4">
-									<img
-										src=""
-										alt="Ibrahim Ansari"
-										class="w-full h-full object-cover rounded-full"
-									/>
-									<a
-										href="https://www.linkedin.com/in/ibrahim-ansari-775529270/"
-										target="_blank"
-										rel="noopener noreferrer"
-										class="absolute top-0 right-0 bg-white rounded-full p-1"
+							<h3 class="text-xl font-bold text-center mb-2">
+								Aasim Ul Haq
+							</h3>
+							<p class="text-gray-600 text-center">CMO</p>
+						</div>
+						<div class="w-64 bg-white p-6 rounded-lg shadow-md">
+							<div class="relative w-32 h-32 mx-auto mb-4">
+								<img
+									src=""
+									alt="Ibrahim Ansari"
+									class="w-full h-full object-cover rounded-full"
+								/>
+								<a
+									href="https://www.linkedin.com/in/ibrahim-ansari-775529270/"
+									target="_blank"
+									rel="noopener noreferrer"
+									class="absolute top-0 right-0 bg-white rounded-full p-1"
+								>
+									<svg
+										class="w-5 h-5 text-blue-600"
+										fill="currentColor"
+										viewBox="0 0 20 20"
+										xmlns="http://www.w3.org/2000/svg"
 									>
-										<svg
-											class="w-5 h-5 text-blue-600"
-											fill="currentColor"
-											viewBox="0 0 20 20"
-											xmlns="http://www.w3.org/2000/svg"
-										>
-											<path
-												d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
-											/>
-										</svg>
-									</a>
-								</div>
-								<h3 class="text-xl font-bold text-center mb-2">
-									Ibrahim Ansari
-								</h3>
-								<p class="text-gray-600 text-center">
-									Project Manager
-								</p>
+										<path
+											d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
+										/>
+									</svg>
+								</a>
 							</div>
+							<h3 class="text-xl font-bold text-center mb-2">
+								Ibrahim Ansari
+							</h3>
+							<p class="text-gray-600 text-center">
+								Project Manager
+							</p>
 						</div>
 					</div>
 				</div>
