move testimonials up

--- a/index.html
+++ b/index.html
@@ -377,8 +377,44 @@
 				</div>
 			</section>
 
-			<!-- Flow diagram section -->
+			<!-- Testimonial section -->
 			<section class="bg-gray-100 py-20">
+				<div class="container mx-auto px-6" data-aos="fade-up">
+					<div
+						class="w-full flex flex-col items-center justify-center sm:flex-row sm:flex-wrap gap-3"
+					>
+						<div
+							class="bg-white rounded-lg shadow-md p-6 w-full md:w-1/3 flex"
+						>
+							<p class="text-gray-600 mb-4">
+								"Tablingos is amazing. I used to spend hours on
+								manual data entry, but now I can automate it
+								all. It's a game changer!"
+							</p>
+						</div>
+						<div
+							class="bg-white rounded-lg shadow-md p-6 w-full md:w-1/3 flex items-center"
+						>
+							<p class="text-gray-600 mb-4">
+								"I've never seen anything like this before. It's
+								so easy to use and it's saving me so much time."
+							</p>
+						</div>
+						<div
+							class="bg-white rounded-lg shadow-md p-6 w-full md:w-1/3 flex items-center"
+						>
+							<p class="text-gray-600 mb-4">
+								"The configuration options are amazing. I can
+								customize my pipelines to do exactly what I
+								need."
+							</p>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<!-- Flow diagram section -->
+			<section class="py-20">
 				<div class="container mx-auto px-6">
 					<div data-aos="fade-up">
 						<img
@@ -650,42 +686,6 @@
 								</li>
 								<li>✓ Customizable workflows</li>
 							</ul>
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<!-- Testimonial section -->
-			<section class="bg-gray-100 py-20">
-				<div class="container mx-auto px-6" data-aos="fade-up">
-					<div
-						class="w-full flex flex-col items-center justify-center sm:flex-row sm:flex-wrap gap-3"
-					>
-						<div
-							class="bg-white rounded-lg shadow-md p-6 w-full md:w-1/3 flex"
-						>
-							<p class="text-gray-600 mb-4">
-								"Tablingos is amazing. I used to spend hours on
-								manual data entry, but now I can automate it
-								all. It's a game changer!"
-							</p>
-						</div>
-						<div
-							class="bg-white rounded-lg shadow-md p-6 w-full md:w-1/3 flex items-center"
-						>
-							<p class="text-gray-600 mb-4">
-								"I've never seen anything like this before. It's
-								so easy to use and it's saving me so much time."
-							</p>
-						</div>
-						<div
-							class="bg-white rounded-lg shadow-md p-6 w-full md:w-1/3 flex items-center"
-						>
-							<p class="text-gray-600 mb-4">
-								"The configuration options are amazing. I can
-								customize my pipelines to do exactly what I
-								need."
-							</p>
 						</div>
 					</div>
 				</div>
