fix padding for security section

--- a/index.html
+++ b/index.html
@@ -157,12 +157,11 @@
 						class="block py-2 text-gray-800 hover:text-primary transition duration-300"
 						>Features</a
 					>
-					<!-- <!-- <a
+					<!-- <a
 						href="pricing.html"
 						class="block py-2 text-gray-800 hover:text-primary transition duration-300"
 						>Pricing</a
 					> -->
-					-->
 					<a
 						href="blog.html"
 						class="block py-2 text-gray-800 hover:text-primary transition duration-300"
@@ -693,7 +692,7 @@
 			</section>
 
 			<!-- Security Commitment section -->
-			<section class="bg-white py-20 px-32">
+			<section class="bg-white py-20">
 				<div class="container mx-auto px-6">
 					<div class="flex flex-col md:flex-row items-center">
 						<div class="mb-8 md:mb-0" data-aos="fade-right">
