fix about footer

--- a/about.html
+++ b/about.html
@@ -349,30 +349,60 @@
 						<ul>
 							<li>
 								<a
-									href="#"
+									href="index.html"
 									class="text-gray-400 hover:text-white transition duration-300"
 									>Home</a
 								>
 							</li>
 							<li>
 								<a
-									href="#"
+									href="features.html"
 									class="text-gray-400 hover:text-white transition duration-300"
 									>Features</a
 								>
 							</li>
 							<li>
-								<a
-									href="#"
+								<!-- <a
+									href="pricing.html"
 									class="text-gray-400 hover:text-white transition duration-300"
 									>Pricing</a
+								> -->
+							</li>
+							<li>
+								<a
+									href="blog.html"
+									class="text-gray-400 hover:text-white transition duration-300"
+									>Blog</a
 								>
 							</li>
 							<li>
 								<a
-									href="#"
+									href="contact.html"
 									class="text-gray-400 hover:text-white transition duration-300"
-									>Blog</a
+									>Contact</a
+								>
+							</li>
+							<li>
+								<a
+									href="about.html"
+									class="text-gray-400 hover:text-white transition duration-300"
+									>About</a
+								>
+							</li>
+							<li>
+								<a
+									href="https://dggj00jhglh.typeform.com/to/btTB3adb"
+									target="_blank"
+									class="text-gray-400 hover:text-white transition duration-300"
+									>Book a Demo</a
+								>
+							</li>
+							<li>
+								<a
+									href="https://tablingos.gitbook.io"
+									target="_blank"
+									class="text-gray-400 hover:text-white transition duration-300"
+									>Documentation</a
 								>
 							</li>
 						</ul>
@@ -390,13 +420,6 @@
 							</li>
 							<li>
 								<a
-									href="#"
-									class="text-gray-400 hover:text-white transition duration-300"
-									>Facebook</a
-								>
-							</li>
-							<li>
-								<a
 									href="https://www.linkedin.com/company/tablingos"
 									target="_blank"
 									class="text-gray-400 hover:text-white transition duration-300"
@@ -405,13 +428,19 @@
 							</li>
 							<li>
 								<a
-									href="#"
+									href="https://dggj00jhglh.typeform.com/to/ynXZdyCB"
+									target="_blank"
 									class="text-gray-400 hover:text-white transition duration-300"
-									>Instagram</a
+									>Feedback</a
 								>
 							</li>
 						</ul>
 					</div>
+				</div>
+				<div
+					class="border-t border-gray-700 mt-8 pt-8 text-sm text-center text-gray-400"
+				>
+					© 2024 Tablingos. All rights reserved.
 				</div>
 			</div>
 		</footer>
