--- a/about.html
+++ b/about.html
@@ -283,7 +283,7 @@
 						<div class="w-64 bg-white p-6 rounded-lg shadow-md">
 							<div class="relative w-32 h-32 mx-auto mb-4">
 								<img
-									src="IA_SQUARE.png"
+									src="./res/IA_SQUARE.png"
 									alt="Ibrahim Ansari"
 									class="w-full h-full object-cover rounded-full"
 								/>
