--- a/about.html
+++ b/about.html
@@ -278,7 +278,7 @@
 							<h3 class="text-xl font-bold text-center mb-2">
 								Aasim Ul Haq
 							</h3>
-							<p class="text-gray-600 text-center">CMO</p>
+							<p class="text-gray-600 text-center">Co-Founder & CMO</p>
 						</div>
 						<div class="w-64 bg-white p-6 rounded-lg shadow-md">
 							<div class="relative w-32 h-32 mx-auto mb-4">
@@ -309,7 +309,7 @@
 								Ibrahim Ansari
 							</h3>
 							<p class="text-gray-600 text-center">
-								Project Manager
+								Co-Founder & Project Manager
 							</p>
 						</div>
 					</div>
